schema_derive/tests/ui/fail/fail_schema_enum_on_struct.rs
use parameter_schema_derive::EnumSchema;

#[derive(EnumSchema)]
struct NotAnEnum {
    field: i32,
}

fn main() {}
